--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -52,4 +52,25 @@ dependencies {
 
     //Old good Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    //ktx android
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.1'
+    implementation 'androidx.activity:activity-ktx:1.5.1'
+
+    //Coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1")
+
+    // Kotlin navigation
+    def nav_version = "2.5.1"
+    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
+    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+
+    // rxJava
+//    implementation 'io.reactivex:rxjava:1.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
+    //Rx Android
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    // https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
 }
