--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+//buildscript {
+//    ext.kotlin_version = '1.8.0'
+//    repositories {
+//        google()
+//        jcenter()
+//        mavenCentral()
+//    }
+//
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:7.0.3'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+////        classpath 'com.google.gms:google-services:4.3.10'
+////        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+////        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5")
+//    }
+//}
+
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
