--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     def nav_version = "2.5.1"
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+    // navigation
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 
     // rxJava
 //    implementation 'io.reactivex:rxjava:1.3.0'
