--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.greybot.mybuilding"
+        applicationId "com.greybot.mycosts"
         minSdk 21
         targetSdk 31
         versionCode 1
