--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,17 +42,21 @@ android {
 }
 
 dependencies {
-
-
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.databinding:viewbinding:7.2.2'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // Import the Firebase BoM (see: https://firebase.google.com/docs/android/learn-more#bom)
+    implementation platform('com.google.firebase:firebase-bom:30.3.2')
+    implementation 'com.google.firebase:firebase-common-ktx'
+    // Firebase Realtime Database (Kotlin)
+    implementation 'com.google.firebase:firebase-database-ktx'
     //Old good Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
@@ -65,7 +69,7 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1")
 
     // Kotlin navigation
-    def nav_version = "2.5.1"
+//    def nav_version = "2.5.1"
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
     // navigation
