--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'kotlin-parcelize'
 //    id 'com.google.firebase.crashlytics'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'com.google.dagger.hilt.android'
     id 'com.google.gms.google-services'
 }
 
@@ -85,4 +86,13 @@ dependencies {
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    def nav_dagger = "2.44"
+    implementation "com.google.dagger:hilt-android:$nav_dagger"
+    kapt "com.google.dagger:hilt-compiler:$nav_dagger"
+}
+
+// Allow references to generated code (with dagger)
+kapt {
+    correctErrorTypes true
 }
