--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+//    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.databinding:viewbinding:7.4.1'
     implementation 'com.google.firebase:firebase-analytics:21.2.0'
@@ -61,11 +61,13 @@ dependencies {
     implementation(composeBom)
     androidTestImplementation(composeBom)
      //compose libraries
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha06'
+    implementation("androidx.activity:activity-ktx:1.6.1")
+//    implementation "androidx.activity:activity-compose:1.6.1"
     implementation "androidx.compose.runtime:runtime"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.foundation:foundation"
     implementation "androidx.compose.foundation:foundation-layout"
-    implementation "androidx.compose.material:material"
     implementation "androidx.compose.runtime:runtime-livedata"
     implementation "androidx.compose.ui:ui-tooling"
     implementation "com.google.accompanist:accompanist-themeadapter-material:0.28.0"
