--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
     implementation(composeBom)
     androidTestImplementation(composeBom)
+
      //compose libraries
     implementation 'androidx.compose.material3:material3:1.1.0-alpha06'
     implementation("androidx.activity:activity-ktx:1.6.1")
@@ -73,6 +74,10 @@ dependencies {
     implementation "com.google.accompanist:accompanist-themeadapter-material:0.28.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
     implementation 'androidx.compose.runtime:runtime-livedata:1.4.0-beta01'
+
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.3"
+    implementation "androidx.compose.material:material:1.3.1"
+
 
     // Import the Firebase BoM (see: https://firebase.google.com/docs/android/learn-more#bom)
     implementation platform('com.google.firebase:firebase-bom:30.3.2')
