--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
      //compose libraries
     implementation 'androidx.compose.material3:material3:1.1.0-alpha06'
     implementation("androidx.activity:activity-ktx:1.6.1")
-//    implementation "androidx.activity:activity-compose:1.6.1"
+    implementation "androidx.activity:activity-compose:1.6.1"
     implementation "androidx.compose.runtime:runtime"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.foundation:foundation"
@@ -76,7 +76,7 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.4.0-beta01'
 
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.3"
-    implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.compose.material:material:1.4.0-beta02"
 
 
     // Import the Firebase BoM (see: https://firebase.google.com/docs/android/learn-more#bom)
