--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.1'
     }
+    namespace 'com.greybot.mycosts'
 }
 
 dependencies {
